--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "uui": "^1.0.7",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
